--- a/treino.ipynb
+++ b/treino.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPSj5Y3+WQbx22OSZWCGVnl",
+      "authorship_tag": "ABX9TyPYC6g7plXZa5/z+fZnMhSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#with tf.device(\"/device:GPU:0\"):"
+      ],
+      "metadata": {
+        "id": "p3FhRmgNNRxm"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ObCK2nRxri1C",
-        "outputId": "ba6094ef-e6f1-4a51-f57d-09fe400216b1"
+        "outputId": "3f944d4d-7f15-4de7-cdbd-67f41f858c45"
       },
       "outputs": [
         {
@@ -55,17 +66,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!nvidia-smi"
-      ],
-      "metadata": {
-        "id": "w79L0ijVRuFA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "! git clone https://github.com/ultralytics/yolov5.git"
       ],
       "metadata": {
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sT39Y9WA072U",
-        "outputId": "5f42eeb0-7786-455c-8495-27af952af869"
+        "outputId": "947bdc3a-292d-48d6-e671-5c098ca7111a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,8 +86,8 @@
             "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
             "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
             "remote: Total 17582 (delta 0), reused 0 (delta 0), pack-reused 17579 (from 2)\u001b[K\n",
-            "Receiving objects: 100% (17582/17582), 16.83 MiB | 16.30 MiB/s, done.\n",
-            "Resolving deltas: 100% (11978/11978), done.\n"
+            "Receiving objects: 100% (17582/17582), 16.81 MiB | 28.98 MiB/s, done.\n",
+            "Resolving deltas: 100% (11970/11970), done.\n"
           ]
         }
       ]
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tiSOAj5u1MRs",
-        "outputId": "f1e5f2d6-b14e-4931-b79e-9bc2e0d1caa9"
+        "outputId": "c123d53e-d5f2-40a4-e506-a0168ad5728e"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch>=1.8.0->-r yolov5/requirements.txt (line 15)) (3.0.3)\n",
             "Downloading thop-0.1.1.post2209072238-py3-none-any.whl (15 kB)\n",
             "Downloading ultralytics-8.3.205-py3-none-any.whl (1.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m14.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading ultralytics_thop-2.0.17-py3-none-any.whl (28 kB)\n",
             "Installing collected packages: ultralytics-thop, thop, ultralytics\n",
             "Successfully installed thop-0.1.1.post2209072238 ultralytics-8.3.205 ultralytics-thop-2.0.17\n"
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "kdYho3yu4Ynj"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -5363,24 +5363,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dentro do diretório /yolov5\n",
-        "!python detect.py --weights yolov5s.pt --img 640 --source /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test --data yolov5/data/names.yaml'"
+        "!python yolov5/detect.py --weights yolov5s.pt --img 640 --source /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "81gPshDgSIfZ",
-        "outputId": "7ba9f3a7-2dd6-493a-be1d-e75a859aa05b"
+        "id": "ZrFfpYTsx5OP",
+        "outputId": "e0a11ef1-b47b-435a-968b-c0a9a6de064c"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: -c: line 1: unexpected EOF while looking for matching `''\n",
-            "/bin/bash: -c: line 2: syntax error: unexpected end of file\n"
+            "\u001b[34m\u001b[1mdetect: \u001b[0mweights=['yolov5s.pt'], source=/content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/, data=yolov5/data/coco128.yaml, imgsz=[640, 640], conf_thres=0.25, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_format=0, save_csv=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=yolov5/runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
+            "YOLOv5 🚀 v7.0-433-ga1019635 Python-3.12.11 torch-2.8.0+cu126 CPU\n",
+            "\n",
+            "Fusing layers... \n",
+            "YOLOv5s summary: 213 layers, 7225885 parameters, 0 gradients, 16.4 GFLOPs\n",
+            "image 1/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/escova_teste (1).jpg: 448x640 1 toothbrush, 219.7ms\n",
+            "image 2/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/escova_teste (2).jpg: 640x448 1 toothbrush, 214.2ms\n",
+            "image 3/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/escova_teste (3).jpg: 480x640 1 toothbrush, 247.2ms\n",
+            "image 4/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/escova_teste (4).jpg: 448x640 2 toothbrushs, 218.8ms\n",
+            "image 5/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/escova_teste (5).jpg: 384x640 1 toothbrush, 195.9ms\n",
+            "image 6/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/teste_martelo (1).jpg: 640x640 1 knife, 426.4ms\n",
+            "image 7/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/teste_martelo (2).jpg: 256x640 1 scissors, 129.1ms\n",
+            "image 8/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/teste_martelo (3).jpg: 448x640 1 scissors, 210.1ms\n",
+            "image 9/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/teste_martelo (4).jpg: 448x640 1 person, 1 scissors, 203.8ms\n",
+            "image 10/10 /content/drive/MyDrive/FIAP/Tarefa_Cap_1/test/teste_martelo (5).jpg: 448x640 1 toothbrush, 196.6ms\n",
+            "Speed: 0.8ms pre-process, 226.2ms inference, 1.1ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1myolov5/runs/detect/exp3\u001b[0m\n"
           ]
         }
       ]
@@ -5388,13 +5402,91 @@
     {
       "cell_type": "code",
       "source": [
-        "with tf.device(\"/device:GPU:0\"):"
+        "# Imports\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import confusion_matrix"
       ],
       "metadata": {
-        "id": "p3FhRmgNNRxm"
+        "id": "dfNO5f-_1Iaf"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Carregar o dataset\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "(train_ds, train_labels), (test_ds, test_labels) ="
+      ],
+      "metadata": {
+        "id": "6q15hlan9vcJ"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Carregar os dados\n",
+        "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
+        "    '/content/drive/MyDrive/FIAP/Tarefa_Cap_1/images/train',\n",
+        "    seed=42,\n",
+        "    batch_size=-1\n",
+        ")\n",
+        "\n",
+        "train_labels = tf.keras.utils.image_dataset_from_directory(\n",
+        "    '/content/drive/MyDrive/FIAP/Tarefa_Cap_1/labels/train',\n",
+        "    seed=42,\n",
+        "    batch_size=-1\n",
+        ")\n",
+        "\n",
+        "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+        "    '/content/drive/MyDrive/FIAP/Tarefa_Cap_1/images/val',\n",
+        "    seed=42,\n",
+        "    batch_size=-1\n",
+        ")\n",
+        "\n",
+        "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+        "    '/content/drive/MyDrive/FIAP/Tarefa_Cap_1/labels/val',\n",
+        "    seed=42,\n",
+        "    batch_size=-1\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 401
+        },
+        "id": "6f7WbXaP2fvF",
+        "outputId": "782a4dd0-37be-49f4-a2b2-9ec627408041"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 0 files belonging to 0 classes.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "No images found in directory /content/drive/MyDrive/FIAP/Tarefa_Cap_1/images/train. Allowed formats: ('.bmp', '.gif', '.jpeg', '.jpg', '.png')",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1709746237.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Carregar os dados\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m train_ds = tf.keras.utils.image_dataset_from_directory(\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;34m'/content/drive/MyDrive/FIAP/Tarefa_Cap_1/images/train'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mseed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/keras/src/utils/image_dataset_utils.py\u001b[0m in \u001b[0;36mimage_dataset_from_directory\u001b[0;34m(directory, labels, label_mode, class_names, color_mode, batch_size, image_size, shuffle, seed, validation_split, subset, interpolation, follow_links, crop_to_aspect_ratio, pad_to_aspect_ratio, data_format, verbose)\u001b[0m\n\u001b[1;32m    327\u001b[0m         )\n\u001b[1;32m    328\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mimage_paths\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 329\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m    330\u001b[0m                 \u001b[0;34mf\"No images found in directory {directory}. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m                 \u001b[0;34mf\"Allowed formats: {ALLOWLIST_FORMATS}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: No images found in directory /content/drive/MyDrive/FIAP/Tarefa_Cap_1/images/train. Allowed formats: ('.bmp', '.gif', '.jpeg', '.jpg', '.png')"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
